# ihex2avr

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  avr.txt  avr_disasm.c  avr_disasm.h  avr_instr.c  avr_instr.h  avr_main.c  avr_parse.c  avr_parse.h  cmake_install.cmake  ihex2asm.c  ihex2avr  ihex2avr.c  main.c  run
